Fixed - RSortedSet comparator without declared constructor can't be used. #4145